Changes in getAll api to use the native query